--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-08-09 02:47:48
+lastsearch = 2024-08-09 03:31:19
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -21.7%%
 title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html?srsltid=AfmBOoouII1YJnuIdACVljhKftEfiakmwpcftiAs5Iz_sG6V2zmjqc0H
+url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOornAGJA6dNkd6Rg-4OSqbPjFwPBO0LvXVOtLbTbRav7a0pPJU8f
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
