--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-09 00:15:55
+lastsearch = 2024-08-09 03:14:49
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -54.2%%
-title = 🔴TRỰC TIẾP 🔴THỜI SỰ 19H VTV1 - 20/3/2024 | ĐÀI ...
-url = https://www.youtube.com/watch?v=Pa-TmxiqHBk
+match = -104.2%%
+title = Chủ tịch Quốc hội làm việc với tỉnh ủy Đồng Nai | Truyền hình ...
+url = https://www.youtube.com/watch?v=Q27ilq47jwA
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
@@ -245,4 +245,9 @@ url = https://support.microsoft.com/vi-vn/office/max-hàm-max-e0012414-9ac8-4b3
 match = -70.8%%
 title = TD1926171: Thanh toán tiền lãi trái phiếu năm 2024
 url = https://www.vsd.vn/vi/ad/173694
+
+[stc.dongthap.gov.vn]
+match = 16.7%%
+title = SỞ TÀI CHÍNH TỈNH ĐỒNG THÁP
+url = https://stc.dongthap.gov.vn/
 
