--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-09 00:17:00
+lastsearch = 2024-08-09 03:21:27
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu trúc hạt
 [demxanh.com]
 match = -9.7%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorMEnXrgqHyZKcCfWHH2lGdrBLG4uYJsvfM3tNxTa3XmyjXsWCt
 
 [www.sendo.vn]
 match = 0.0%%
