--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-08 23:50:58
+lastsearch = 2024-08-09 03:27:04
 
 [www.bible.com]
-match = -128.6%%
-title = MARKA 16 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
+match = -135.7%%
+title = JOHANA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/JHN.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -82,9 +82,9 @@ title = Fan Bingbing 范冰冰 (@bingbing_fan)
 url = https://www.instagram.com/bingbing_fan/?hl=en
 
 [en.wikipedia.org]
-match = -66.7%%
-title = Anggun
-url = https://en.wikipedia.org/wiki/Anggun
+match = -100.0%%
+title = Lü Bu
+url = https://en.wikipedia.org/wiki/Lü_Bu
 
 [mail.storyfb.com]
 match = 35.7%%
@@ -127,9 +127,9 @@ title = Mùng Chụp tự bung Xếp Gọn cỡ Lớn nhiều size
 url = https://thongminhtienich.vn/mung-chup-tu-bung-xep-gon-co-lon-nhieu-size/
 
 [m.facebook.com]
-match = -228.6%%
-title = Mark 16:16 A ringa baptisma chang chu chhandamin an ...
-url = https://m.facebook.com/groups/1684995845046002/posts/3418252808386955/
+match = -221.4%%
+title = All the Awesome August events revealed now! 🎉 AFO ...
+url = https://m.facebook.com/HonorofKingsGlobal/photos/all-the-awesome-august-events-revealed-now-afo-events-are-about-to-start-partici/480011494735407/
 
 [tbmart.vn]
 match = -21.4%%
@@ -159,7 +159,7 @@ url = https://isac.uchicago.edu/sites/default/files/uploads/shared/docs/as16.pdf
 [www.bing.com]
 match = -175.0%%
 title = Bing
-url = http://www.bing.com/
+url = https://www.bing.com/
 
 [thuedochoi.com]
 match = -107.1%%
