--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-08-09 01:26:00
+lastsearch = 2024-08-09 03:29:13
 
 [bellizeno.com]
 match = -14.3%%
@@ -144,5 +144,5 @@ url = https://vn.biggo.com/s/ruột+gối+bông+gòn+cao+cấp/
 [metric.vn]
 match = -23.3%%
 title = Báo cáo thị trường Ruột gối vuông dành cho doanh nghiệp
-url = https://metric.vn/ruot-goi-vuong?srsltid=AfmBOorse7WB1cIvkU_hJUV7JMQJ2l7Qt_8TsZY-wr9ZdjBQfEl4QdjQ
+url = https://metric.vn/ruot-goi-vuong
 
