--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-09 04:47:36
+lastsearch = 2024-08-09 05:22:34
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOooouJPlkxXoL1PeNqAUgkDDq2IIE-tp66EdEv1LiC2qgfXSXK_8
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
 
 [everon.com.vn]
 match = 5.3%%
 title = BỘ EVERON EPC 19043
-url = https://everon.com.vn/epc-19043/?srsltid=AfmBOoodrGdO0C2PO2KvMCXhHjz_6HI2JKwjHIlVb5MqgDVHU7f1JahA
+url = https://everon.com.vn/epc-19043/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoptGHlP3x3GZZi9xzIS-hhct56NizMBzAOL7YhJqqSBGyVJBUxu
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
