--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-08-09 03:33:40
+lastsearch = 2024-08-09 05:21:53
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -59,7 +59,7 @@ url = https://thegioichanra.com/san-pham/bo-chan-ga-goi-tencel-edena-love-22/
 [demxanh.com]
 match = 23.1%%
 title = Cửa hàng chăn ga gối cưới Bắc Giang
-url = https://demxanh.com/bo-chan-ga-goi-cuoi-bac-giang.html
+url = https://demxanh.com/bo-chan-ga-goi-cuoi-bac-giang.html?srsltid=AfmBOorVfW8yckzyedloyKcMqpP6KcnuidxmzvMCOhDeiJeQf3gJgkfn
 
 [elective.com.vn]
 match = 27.3%%
