--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-09 02:55:51
+lastsearch = 2024-08-09 05:24:37
 
 [tiki.vn]
 match = -144.4%%
@@ -27,9 +27,9 @@ title = Bộ Drap Cotton Satin LS1512-N07
 url = http://lavendervn.com/bo-drap-cotton-satin-ls1512-n07
 
 [choixe.vn]
-match = -138.9%%
-title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
-url = https://choixe.vn/collections/giuong-160x200
+match = -144.4%%
+title = Bộ phòng ngủ Queen – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
+url = https://choixe.vn/collections/bo-phong-ngu-queen
 
 [nemkimtrang.com]
 match = -105.6%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Common C104 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-common-c104
+match = -155.6%%
+title = Đệm lò xo Appolo A201 2 viền (Mẫu 4) - Forever Bedding
+url = https://foreverbedding.net/dem-lo-xo-appolo-a201-2-vien-mau-4
 
 [aeoneshop.com]
 match = -105.6%%
@@ -72,9 +72,9 @@ title = Bộ Drap phủ ViVaBon SL102 (160x200) - draphoangcuong
 url = http://draphoangcuong.xim.tv/san-pham/bo-drap-phu-vivabon-sl102-160x200-sp202129.html
 
 [antbedding.com]
-match = 33.3%%
-title = Bộ Chăn Ga Gối Eu07
-url = https://antbedding.com/bo-chan-ga-goi-eu07
+match = -33.3%%
+title = Bộ Chăn Ga Gối Modal Cotton MC13
+url = https://antbedding.com/bo-chan-ga-goi-modal-cotton-mc13
 
 [www.mym.com.vn]
 match = -57.1%%
@@ -107,9 +107,9 @@ title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 mát ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
-match = -127.8%%
-title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
+match = -116.7%%
+title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
 
 [everonhanquoc.vn]
 match = -22.2%%
@@ -142,9 +142,9 @@ title = Bộ phủ màu 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-phu-mau-180x200.html
 
 [dovihome.vn]
-match = 0.0%%
-title = Giường gỗ DV-05
-url = https://dovihome.vn/giuong-go-dv-05
+match = 6.7%%
+title = Giường gỗ DV-20
+url = https://dovihome.vn/giuong-go-dv-20
 
 [www.tripadvisor.com]
 match = -144.4%%
