--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-09 01:47:58
+lastsearch = 2024-08-09 05:18:03
 
 [shopee.vn]
 match = 56.2%%
@@ -52,9 +52,9 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -237.5%%
-title = Khao Sib Ha Chan National Park bird checklist - Avibase - Bird ...
-url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH02ct02
+match = -275.0%%
+title = Phu Rua National Park bird checklist - Avibase - Bird Checklists of ...
+url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04le03
 
 [partner.goodsmile.info]
 match = 6.2%%
@@ -325,4 +325,9 @@ url = https://www.iucn.org/sites/default/files/2023-02/101-q-a-about-marine-turt
 match = -131.2%%
 title = Goodridge Authorised Sales and Service Centres
 url = https://goodridge.com/authorised-sales-and-service-centre/
+
+[i.dell.com]
+match = -12.5%%
+title = Public Supplier List
+url = https://i.dell.com/sites/doccontent/corporate/corp-comm/en/Documents/dell-suppliers.pdf
 
