--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-08 20:34:52
+lastsearch = 2024-08-09 05:18:48
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -117,9 +117,9 @@ title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu ch
 url = https://hoanmy.com/bang-can-nang-thai-nhi/
 
 [m.facebook.com]
-match = -206.2%%
-title = Trận chiến vì danh dự - GAM vs TS | Bán Kết Nhánh Thắng 1 ...
-url = https://m.facebook.com/vcslmht/videos/trận-chiến-vì-danh-dự-gam-vs-ts-bán-kết-nhánh-thắng-1-vcs-2024-mùa-hè/892848602698546/
+match = -137.5%%
+title = VCS LMHT - "Hai Thế Giới" quá đẹp! #VCSLMHT ...
+url = https://m.facebook.com/vcslmht/photos/hai-thế-giới-quá-đẹpvcslmht-vcs2024mùahè-foreverwestand/461709146766414/
 
 [www.sjcallahabad.org]
 match = -212.5%%
