--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-09 02:19:47
+lastsearch = 2024-08-09 05:15:37
 
 [www.everonvn.vn]
 match = -105.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOoqDuxJAKJZG0ySEJ6m4VqZukok6AmfBGVQYNWXeSyLsWF2o15ro
+url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
 match = -65.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOoqO3HYP-TGScAxFX8R3DNY-ANWlH-SZKPQ47Ue3z0pwaMaMDUrZ
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop0pv_ZAq0cS3Bw6GI2z64jAgvq8e8tyMsMwvU2uibm8l0RFSH_
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
 
 [www.diepxuan.com]
 match = 0.0%%
