--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-08 23:59:17
+lastsearch = 2024-08-09 05:14:10
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Điệp Xuân Ruột gối kê Korea 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html?srsltid=AfmBOophkDt70N3j2o8RtYk8HxdIF6calvIJ8q9GVfsTgUioNZpiK2gv
+url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 
 [entershopping.vn]
 match = -123.5%%
@@ -17,14 +17,14 @@ title = Ruột gối ép Hàn Quốc Korea , ruot-goi-ep-han-quoc-korea
 url = https://entershopping.vn/ruot-goi-ep-han-quoc-korea.html
 
 [www.detmaykimthanh.com]
-match = 5.9%%
-title = Ruột gối Microfiber Korea Virgin
-url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
+match = 52.9%%
+title = Ruột gối Standard
+url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-129.html
 
 [shopee.vn]
-match = 58.8%%
-title = ruột gối hơi hiệu KOREA
-url = https://shopee.vn/ruột-gối-hơi-hiệu-KOREA-i.43470238.725470536
+match = 64.7%%
+title = Ruột gối ép hơi Korea
+url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 
 [demxanh.com]
 match = -100.0%%
@@ -49,7 +49,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [www.lazada.vn]
 match = -147.1%%
 title = Gối Ngủ MOSAM KOREA (Ruột Kèm Vỏ Gối) 35x55 cm có ...
-url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html?srsltid=AfmBOor7aWq0dDGgKxFcOdzQo5TLuQgUH--wQpxeg26o941EdnYgmCIX
+url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-cm-co-khoa-keo-phu-hop-cho-be-di-hoc-nguoi-di-cong-trinhsinh-vien-i2334711515.html
 
 [www.hotdeal.vn]
 match = -111.8%%
