--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-09 04:34:27
+lastsearch = 2024-08-09 05:22:54
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -277,9 +277,9 @@ title = Service Directory (by State) - Optometry
 url = https://www.va.gov/optometry/service_directory_by_state.asp
 
 [www.usmcu.edu]
-match = 0.0%%
-title = 
-url = https://www.usmcu.edu/Research/Marine-Corps-History-Division/Outside-Resources/
+match = -118.2%%
+title = U.S. Marines in Vietnam Fighting the North Vietnamese ...
+url = https://www.usmcu.edu/Portals/218/U_S_ Marines in Vietnam Fighting the North Vietnamese 1967  PCN 19000309000.pdf
 
 [huggingface.co]
 match = -133.3%%
