--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-09 02:51:41
+lastsearch = 2024-08-09 05:27:31
 
 [noithathomy.com]
 match = -42.9%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-N
 [www.lazada.vn]
 match = 23.8%%
 title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html?srsltid=AfmBOoqEBYQsJ53a3yLv7la7HxVDNnqi69YHEuRVGO2bZQ6dsFFdo5DA
+url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
 
 [tiki.vn]
-match = -85.7%%
-title = Mua Thảm trải sàn Bali giá rẻ chất lượng 2m*3m. m6*2m3
-url = https://tiki.vn/tham-trai-san-bali-gia-re-chat-luong-2m-3m-m6-2m3-p143202560.html
+match = -9.5%%
+title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
+url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
 
 [muachunghaiphong.com]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://thamsanulisuky.com/san-pham/tham-bali-2mx3m-trai-san-phong-ngu/
 [metric.vn]
 match = -109.5%%
 title = Báo cáo thị trường Thảm phòng khách 3m dành cho doanh ...
-url = https://metric.vn/tham-phong-khach-3m?srsltid=AfmBOoorjzPZDO99KEa9nRm77pG8cdgnvePPhb8vB9v5Sl4eTl42yU55
+url = https://metric.vn/tham-phong-khach-3m
 
 [giadunghienhoa.com]
 match = -38.1%%
